# Mini-R1

./: .gitignore  Readme.md  deepspeed_zero3.yaml  eval.sh  eval_3b_countdown  eval_main.py  grpo-qwen-2.5-3b-deepseek-r1-countdown.yaml  gsm8k_accuracy  guess_word  hugging.pub  log  main.py  output  output.loh  pyproject.toml  start.sh  test.py  true_answer.txt  true_answer_3b.txt  true_answer_7b.txt  upload.py
.ipynb_checkpoints/: countdown_accuracy-checkpoint  eval-checkpoint.sh  format-checkpoint  grpo-qwen-2.5-3b-deepseek-r1-countdown-checkpoint.yaml  main-checkpoint.py  settings-checkpoint.py  start-checkpoint.sh  true_answer_3b-checkpoint.txt
dataset/: countdown_chinese.py  countdown_tasks_3to4.py  get_dataset.py  gmsk8.py  guess_word.py  guess_word.xlsx  output.json  test.json  train.json
dataset/.ipynb_checkpoints/: countdown_tasks_3to4-checkpoint.py
eval/: eval_pipeline.py
eval/.ipynb_checkpoints/: eval_pipeline-checkpoint.py
eval_logs/count_down/: evaluate_after_rl_countdown_simple_prompt.log_part1.txt  evaluate_after_rl_countdown_simple_prompt.log_part2.txt
eval_logs/guess_word/: true_answer_3b.txt
method/: grpo.py
model/: get_model.py
model/.ipynb_checkpoints/: get_model-checkpoint.py
reward/: count_down_reward.py  get_reward.py  gsm8k_reward.py  guess_word_reward.py  reward.py
reward/.ipynb_checkpoints/: count_down_reward-checkpoint.py  countdown_chinese_reward-checkpoint.py  get_reward-checkpoint.py  guess_word_reward-checkpoint.py
train/: pipeline.py
util/: huggingface.py  set_seed.py
(+8 files in other folders)
