[project]
name = "mini-r1"
version = "0.1.0"
description = "尝试复现Deepseek R1的 ahamoment"
authors = [
    {name = "Linghua Zhang",email = "lz101@rice.edu"}
]
readme = "README.md"
requires-python = "<4.0, >=3.9"
dependencies = [
    "tensorboard (>=2.19.0,<3.0.0)",
    "setuptools (>=74.1.1)",
    "transformers (==4.48.1)",
    "datasets (==3.1.0)",
    "accelerate (==1.3.0)",
    "hf-transfer (==0.1.9)",
    "deepspeed (==0.15.4)",
    "trl (==0.14.0)",
    "vllm (==0.7.0)",
    "wandb (>=0.19.6,<0.20.0)",
    "huggingface-hub (>=0.28.1,<0.29.0)",
    "peft (>=0.14.0,<0.15.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


